# agent-vitals-bench

./: .gitignore  Makefile  README.md  agents.md  pyproject.toml
cmos/: .gitignore  README.md
corpus/: README.md
docs/: corpus_schema.md  gate_criteria.md  roadmap.md  technical_architecture.md
elicitation/: __init__.py  elicit_confabulation.py  elicit_confabulation_causal.py  elicit_runaway_cost.py  elicit_thrash.py  providers.py
evaluator/: __init__.py  gate.py  metrics.py  partial_trace.py  reporter.py  runner.py
generators/: __init__.py  base.py  confabulation.py  loop.py  runaway_cost.py  stuck.py  thrash.py
prototypes/: __init__.py  causal_confab.py  causal_runaway.py  comparative_bench.py  hopfield_detector.py  mamba_detector.py  predictor_adapters.py  tda_detector.py
reports/: confab-protocol-revision.md  eval-20260402-legacy.json  eval-20260402-legacy.md  eval-20260402-v1.json  eval-20260402-v1.md  eval-20260403-cross-model.md  eval-20260403-v1-crewai.json  eval-20260403-v1-crewai.md  eval-20260403-v1-dspy.json  eval-20260403-v1-dspy.md  eval-20260403-v1-langgraph.json  eval-20260403-v1-langgraph.md  eval-20260403-v1.json  eval-20260403-v1.md  eval-20260404-v1-crewai.json  eval-20260404-v1-crewai.md  eval-20260404-v1-dspy.json  eval-20260404-v1-dspy.md  eval-20260404-v1-langgraph.json  eval-20260404-v1-langgraph.md  eval-20260404-v1.json  eval-20260404-v1.md  eval-20260405-cross-model-3tier.md  eval-20260405-v1-crewai.json  eval-20260405-v1-crewai.md  eval-20260405-v1-dspy.json  eval-20260405-v1-dspy.md  eval-20260405-v1-langgraph.json  eval-20260405-v1-langgraph.md  eval-20260405-v1.json  eval-20260405-v1.md  eval-20260406-v1-crewai.json  eval-20260406-v1-crewai.md  eval-20260406-v1-dspy.json  eval-20260406-v1-dspy.md  eval-20260406-v1-langgraph.json  eval-20260406-v1-langgraph.md  eval-20260406-v1.json  eval-20260406-v1.md  eval-20260407-v1-crewai.json  (+40 more)
(+2181 files in other folders)
