[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-vitals-bench"
version = "0.1.0"
description = "Validation and benchmarking harness for Agent Vitals detectors — corpus, generators, evaluator, and elicitation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Agent Vitals Contributors"},
]
keywords = ["agent", "vitals", "benchmark", "evaluation", "corpus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agent-vitals>=1.11.0",
]

[project.optional-dependencies]
elicitation = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "httpx>=0.27",
]
tda = [
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.3,<1.4",
    "joblib>=1.5",
    "giotto-tda>=0.6.2,<0.7",
]
mamba = [
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.3,<1.4",
    "torch>=2.0",
]
hopfield = [
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.3,<1.4",
    "torch>=2.0",
    "hopfield-layers>=1.0.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.7",
    "mypy>=1.13",
]
all = [
    "agent-vitals-bench[elicitation,tda,mamba,hopfield,dev]",
]

[project.urls]
Repository = "https://github.com/kneelinghorse/agent-vitals-bench"

[tool.setuptools.packages.find]
include = ["generators*", "evaluator*", "elicitation*", "prototypes*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/../agent-vitals"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
